--- a/index.html
+++ b/index.html
@@ -9,18 +9,35 @@
         <script src="js/fruits_and_veggies_test.js"></script>
         <script src="js/app.js"></script>
     </head>
-    <body>
+    <body ng-app="myApp" ng-controller="myCtrl">
         <div class="container">
             <h1>Fruit and Veggies</h1>
             <div class="row">
                 <div class="col-sm-4">
-                    col 1
+                    Fruits
+                    <div class="well well-sm text-center" ng-repeat="fruit in fruitsArray track by $index">
+                      {{ fruit }}
+                      <button class="btn btn-primary pull-right" ng-click="backRight($index)"> > </button>
+                    </div>
                 </div>
                 <div class="col-sm-4">
-                    col 2
+                    Pool
+
+                    <div class="well well-sm text-center" ng-repeat="food in foodArray track by $index">
+                    <button class="btn btn-primary pull-left" ng-click="moveLeft($index)"> < </button>
+                    {{ food }}
+                    <button class="btn btn-primary pull-right" ng-click="moveRight($index)"> > </button>
+                    </div>
                 </div>
+                   <!--  <div class="well well-sm text-center" ng-repeat="food in foodArray">
+                        <left-arrow> </left-arrow> {{ food }} <right-arrow></right-arrow>
+                        </div> -->
                 <div class="col-sm-4">
-                    col 3
+                    Vegetables
+                      <div class="well well-sm text-center" ng-repeat="vegetable in vegetablesArray track by $index">
+                      {{ vegetable }}
+                      <button class="btn btn-primary pull-left" ng-click="backLeft($index)"> < </button>
+                      </div>
                 </div>
             </div>
         </div>
